manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-cert-admission-controller-v2
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-cert-admission-controller-v2
  template:
    metadata:
      labels:
        app: istio-cert-admission-controller-v2
    spec:
      containers:
      - name: istio-cert-admission-controller-v2
        image: sayedimran/istio-cert-admission-webhook:v2.0.0
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
          requests:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: /certs
          name: webhook-certs
          readOnly: true
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccount: istio-cert-admission-controller-v2
      volumes:
      - name: webhook-certs
        secret:
          defaultMode: 420
          secretName: istio-webhook-tls

---
apiVersion: v1
kind: Service
metadata:
  name: istio-cert-admission-controller-v2
  labels:
    app: istio-cert-admission-controller-v2
  namespace: istio-system
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: istio-cert-admission-controller-v2
  type: ClusterIP
