manifests/validating-wehbook-admission.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: istio-cert-admission-webhook
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: <ca-bundle>
    service:
      name: gateway-admission-webhook
      namespace: istio-system
      path: /validate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: webhook.istio.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - networking.istio.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - virtualservices
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 5
